[tool.poetry]
name = "console-assistant"
version = "0.1.0"
description = ""
authors = ["AntonHran <anton.hranovskyi@gmail.com>"]
readme = "README.md"
packages = [{include = "console_assistant"}]

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "^23.1.0"
aioshutil = "^1.3"
aiopath = "^0.6.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
